@@ -1,4 +1,5 @@
 0.06
+ - Update Module::Install to 1.16 version.
 
 0.05 2014-11-07T05:13:14+01:00
  - Fix copy, if doesn't exist Win32::Symlink on Window.
